# Mathematics-in-Machine-Learning-and-Deep-Learning

Music/MIDI to CSV/music-segmentation-toolkit-with-gpt/: README_midiphrase.md  pyproject.toml  requirements.txt
Music/MIDI to CSV/music-segmentation-toolkit-with-gpt/midiphrase/: __init__.py  midi_processing.py  reconstruction.py  segmentation.py
Music/MIDI to CSV/music-segmentation-toolkit-with-gpt/scripts/: csv_to_midi.py  midi_to_csv.py
NN by Hand/: Use_NN.ipynb  neural_network.py
Stochastic Gradient Decent Algorithm/.ipynb_checkpoints/: SGD_four_point_example-checkpoint.ipynb
Stochastic Gradient Descent Algorithm/: SGD_four_point_example.ipynb  sgd_algorithms.py
