[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midiphrase"
version = "0.1.0"
description = "MIDI phrase segmentation and reconstruction using GPT and pretty_midi."
authors = [
  { name = "Jingwen Feng", email = "jingwen.feng@tufts.edu" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "pretty_midi>=0.2.10",
]

[project.scripts]
midiphrase-midi-to-csv = "scripts.midi_to_csv:main"
midiphrase-csv-to-midi = "scripts.csv_to_midi:main"

[tool.setuptools]
packages = ["midiphrase"]
